# psmiles

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: bumper.yml  pdoc.yml  run_tests.yml
docs/: api_can.md  build.novella  index.md  install.md  mkdocs.yml  usage.md
docs/api/: psmiles.md
docs/content/: api.md  index.md
docs/examples/: create_polymers.ipynb
psmiles/: __init__.py  helper.py  psmiles.py  smiles.py
tests/: test.ipynb  test_book.ipynb  test_canonicalization.py  test_canonicalization_and_dimerization.py  test_dimerization.py  test_fingerprints.py  test_functions.py  tester.ipynb
