[tool.poetry]
name = "psmiles"
version = "0.6.7"
description = "A Python package for working with PSMILES (polymer SMILES) strings."
authors = ["Christopher Kuenneth <christopher.kuenneth@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ramprasad-Group/psmiles"
keywords = ["science", "polymer", "SMILES"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = ">1.19.0"
pandas = ">1.1.0"
rdkit = ">=2022.3.3"
scikit-learn = "^1.1.2"
canonicalize-psmiles = {git = "https://github.com/Ramprasad-Group/canonicalize_psmiles.git"}

mordred = {version = "^1.2.0", optional = true}
sentence-transformers = {version = "^2.2.0", optional = true}
mkdocs = {version = "^1.4.2", optional = true}
mkdocs-material = {version = "^8.5.11", optional = true}
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
readthedocs-custom-steps = {version = "^0.6.2", optional = true}
mkdocstrings-python = {version = "^0.8.2", optional = true}


[tool.poetry.extras]
mordred = ["mordred"]
polyBERT = ["sentence-transformers"]
docs = ["mkdocstrings", "mkdocs", "mkdocs-material", "mkdocstrings-python"]
rtd = ["readthedocs-custom-steps"]

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.readthedocs-custom-steps]
script = """
novella --site-dir ../_build/html -d docs
"""
